--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <img src="images/avatar.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
 
         <!-- Title -->
-        <h1>LittleLink</h1>
+        <h1>Joseph Eudave Links</h1>
 
         <!-- Short Bio -->
         <p>Here you can find all mi social and projects. Explore or send me a dm an lets get in contact.</p>
@@ -198,7 +198,7 @@
             This also includes a link to the LittleLink repository to make forking LittleLink easier.
             You can edit or remove anything here to make your own footer.
         -->
-        <p><a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>.</p>
+        <p><a href="privacy.html">Privacy Policy</a> .</p>
 
       </div>
     </div>
