--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Page Information
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>LittleLink</title>
+  <title>Joseph Eudave Links</title>
   <meta name="description" content="Find us online!">
   <meta name="author" content="Seth Cottle">
 
@@ -74,7 +74,7 @@
         <h1>Joseph Eudave Links</h1>
 
         <!-- Short Bio -->
-        <p>Here you can find all mi social and projects. Explore or send me a dm an lets get in contact.</p>
+        <p>Here you can find all mi social and projects. Explore or send me a dm and let's get in contact.</p>
 
         <!--
 
