--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <br>
 
         <!-- OnlyFans -->
-        <a class="button button-onlyfans" href="#" target="https://www.youtube.com/watch?v=dQw4w9WgXcQ" rel="noopener">
+        <a class="button button-onlyfans" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/onlyfans.svg" alt="Only Fans Logo">OnlyFans (18+)</a>
         <br>
 
