--- a/index.html
+++ b/index.html
@@ -158,27 +158,27 @@
         -->
 
         <!-- Instagram -->
-        <a class="button button-instagram" href="#" target="_blank" rel="noopener">
+        <a class="button button-instagram" href="https://www.instagram.com/josepheudave" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
         <br>
 
         <!-- YouTube -->
-        <a class="button button-yt" href="#" target="_blank" rel="noopener">
+        <a class="button button-yt" href="https://www.youtube.com/@JosephEudave" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/youtube.svg" alt="YouTube Logo">YouTube</a>
         <br>
 
         <!-- Spotify -->
-        <a class="button button-spotify" href="#" target="_blank" rel="noopener">
+        <a class="button button-spotify" href="https://open.spotify.com/user/joseph.frydesk" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/spotify.svg" alt="Spotify Logo">Listen on Spotify</a>
         <br>
 
         <!-- TikTok -->
-        <a class="button button-tiktok" href="#" target="_blank" rel="noopener">
+        <a class="button button-tiktok" href="https://www.tiktok.com/@josepheudave" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/tiktok.svg" alt="TikTok Logo">TikTok</a>
         <br>
 
         <!-- SoundCloud -->
-        <a class="button button-soundcloud" href="#" target="_blank" rel="noopener">
+        <a class="button button-soundcloud" href="https://soundcloud.com/josepheudave" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/soundcloud.svg" alt="SoundCloud Logo">SoundCloud</a>
         <br>
 
@@ -188,7 +188,7 @@
         <br>
 
         <!-- Buy Me a Coffee -->
-        <a class="button button-coffee" href="#" target="_blank" rel="noopener">
+        <a class="button button-coffee" href="https://www.paypal.com/donate/?hosted_button_id=HXC4XFXA7LA22" target="_blank" rel="noopener">
             <img class="icon" src="images/icons/coffee.svg" alt="Buy Me a Coffee">Buy Me a Coffee</a>
         <br>
 
