--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <img src="images/avatar.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
 
         <!-- Title -->
-        <h1>Joseph Eudave Links</h1>
+        <h1>Joseph Eudave</h1>
 
         <!-- Short Bio -->
         <p>Here you can find all mi social and projects. Explore or send me a dm and let's get in contact.</p>
