--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h1>Joseph Eudave</h1>
 
         <!-- Short Bio -->
-        <p></p>
+        <p>Multimedia developer - DJ - Musician</p>
 
         <!--
 
