--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Joseph Eudave Links</title>
-  <meta name="description" content="Find us online!">
+  <meta name="description" content="Get all relevant links form Joseph Eudave">
   <meta name="author" content="Seth Cottle">
 
   <!-- Mobile Specific Metas
