--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Joseph Eudave Links</title>
-  <meta name="description" content="Get all relevant links form Joseph Eudave">
+  <meta name="description" content="Get all relevant links from Joseph Eudave">
   <meta name="author" content="Seth Cottle">
 
   <!-- Mobile Specific Metas
@@ -68,7 +68,7 @@
         -->
 
         <!-- Your Image Here -->
-        <img src="images/avatar.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="LittleLink Logo">
+        <img src="images/avatar.png" class="avatar" srcset="images/avatar@2x.png 2x" alt="Joseph Eudave's Avatar">
 
         <!-- Title -->
         <h1>Joseph Eudave</h1>
@@ -156,6 +156,11 @@
         <br>
         
         -->
+        <!-- Whatsapp -->
+        <a class="button button-whatsapp" href="https://wa.me/your-number?text=Hello!" target="_blank" rel="noopener"
+            <img class="icon" src="images/icons/whatsapp.svg" alt="WhatsApp Logo">WhatsApp</a>
+        <br>
+
 
         <!-- Instagram -->
         <a class="button button-instagram" href="https://www.instagram.com/josepheudave" target="_blank" rel="noopener">
