--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         -->
         <!-- Whatsapp -->
         <a class="button button-whatsapp" href="https://wa.me/525540279134?text=Hello!" target="_blank" rel="noopener"
-            <img class="icon" src="images/icons/whatsapp.svg" alt="WhatsApp Logo">WhatsApp</a>
+            <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
         <br>
 
 
