--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
         
         -->
         <!-- Whatsapp -->
-        <a class="button button-whatsapp" href="https://wa.me/525540279134?text=Hello!" target="_blank" rel="noopener"
-            <img class="icon" src="images/icons/instagram.svg" alt="Instagram Logo">Instagram</a>
+        <a class="button button-whatsapp" href="https://wa.me/525540279134?text=Hello!" target="_blank" rel="noopener">
+            <img class="icon" src="images/icons/whatsapp.svg" alt="whatsapp Logo">whatsapp</a>
         <br>
 
 
