--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <div class="background-image"></div>
   <div class="share-button"></div>
   <div class="container">
     <div class="row">
