--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <!-- Brand Styles -->
     <link rel="stylesheet" href="css/brands.css">
+    <link rel="stylesheet" href="css/style.css">
 
 
   <!-- Favicon
@@ -193,20 +194,13 @@
             <img class="icon" src="images/icons/coffee.svg" alt="Buy Me a Coffee">Buy Me a Coffee</a>
         <br>
 
-        <!-- 
-            Footer:
-            This includes a link to privacy.html page which can be setup for your Privacy Policy.
-            This also includes a link to the LittleLink repository to make forking LittleLink easier.
-            You can edit or remove anything here to make your own footer.
-        -->
+        <!-- Footer -->
         <p><a href="privacy.html">Privacy Policy</a> </p>
 
       </div>
     </div>
   </div>
 
-  <!-- End Document
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 </body>
 
 </html>
