--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="background-image"></div>
+  <div class="particle-container"></div>
   <div class="share-button"></div>
   <div class="container">
     <div class="row">
