--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <link rel="stylesheet" href="css/brands.css">
     <link rel="stylesheet" href="css/style.css">
 
+    <script src="js/particles.js"></script>
+
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
