--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="js/particles.js"></script>
 
 
+
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="images/avatar.png">
@@ -49,6 +50,12 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="background-image"></div>
   <div class="particle-container"></div>
+  <div id="particles-js"></div>
+  <!-- stats - count particles -->
+  <div class="count-particles">
+    <span class="js-count-particles">--</span> particles
+  </div>
+  <!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
   <div class="share-button"></div>
   <div class="container">
     <div class="row">
