--- a/privacy.html
+++ b/privacy.html
@@ -66,20 +66,20 @@
           <!-- Page Information -->
           <p>
             <b
-              >Personal Data collected for the following purposes and using the
-              following services:</b
+              >This Privacy Policy explains how we collect, use, and disclose your personal information when you use our website, https://www.josepheudave.com/. 
+              By accessing or using our website, you agree to the terms of this Privacy Policy.</b
             >
             <br />
             <br />
             <!-- Start Section -->
-            <b>🧮 Analytics</b>
+            <b>🧮 Information we collect</b>
             <br />
-            The services contained in this section enable the Owner to monitor
-            and analyze web traffic and can be used to keep track of User
-            behavior.
+            We collect personal information that you voluntarily provide to us when you contact us through the website, 
+            such as your name and email address. We also collect information that your browser sends whenever you visit our website, 
+            such as your IP address, browser type, browser version, and the pages of our website that you visit.
             <br />
             <br />
-            <!-- Here you can add any analytics companies you use and what they track -->
+            <!-- Here you can add any analytics companies you use and what they track
             <b>1.) Example LLC.</b><br />
             Personal Data:
             <i
@@ -88,58 +88,31 @@
             ><br />
             <a href="https://example.com/privacy/"
               >Privacy Policy</a
+            >-->
+          </p>
+          <!-- End Section -->
+
+          <!-- Start Section -->
+          <p>
+            <b>💻 How we use your information</b>
+            <br />
+            We use your personal information to respond to your inquiries and provide you with information about our services.
+             We may also use your information to improve our website and our services. We will not sell, rent,
+              or share your personal information with any third parties.
+            <br />
+            <br />
+
             >
           </p>
           <!-- End Section -->
 
           <!-- Start Section -->
           <p>
-            <b>📦 Displaying Content From External Platforms</b>
+            <b>🍪 Cookies and other tracking technologies</b>
             <br />
-            This type of service allows you to view content hosted on external
-            platforms directly from the pages of this website and interact with
-            them.<br /><br />
-            This type of service might still collect web traffic data for the
-            pages where the service is installed, even when Users do not use it.
-            <br />
-            <br />
-            <!-- Add any external cdn's and they use and what they track -->
-            <b>1.) Example LLC</b><br />
-            Personal Data:
-            <i
-              >Usage Data; various types of Data as specified in the privacy
-              policy of the service</i
-            >
-            <br />
-            <a href="https://example.com/privacy/"
-              >Privacy Policy</a
-            >
-          </p>
-          <!-- End Section -->
-
-          <!-- Start Section -->
-          <p>
-            <b>📁 Hosting and Backend Infrastructure</b>
-            <br />
-            This type of service has the purpose of hosting Data and files that
-            enable this website to exist.
-            <br />
-            <br />
-            Some services among those listed below, if any, may work through
-            geographically distributed servers, making it difficult to determine
-            the actual location where the Personal Data are stored.
-            <br />
-            <br />
-            <!-- Here you can add any hosting companies you use and what they track -->
-            <b>1.) Example LLC.</b><br />
-            Personal Data:
-            <i
-              >various types of Data as specified in the privacy policy of the
-              service</i
-            >
-            <br />
-            <a href="https://example.com/privacy"
-              >Privacy Policy</a
+            We use cookies and other tracking technologies to analyze trends, administer the website, track users' 
+            movements around the website, and gather demographic information about our user base. 
+            You can control the use of cookies at the individual browser level.
             >
           </p>
           <!-- End Section -->
