--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <!-- Brand Styles -->
     <link rel="stylesheet" href="css/brands.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/particles.js"></script>
 
 
   <!-- Favicon
