--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="stylesheet" href="css/brands.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
 
 
   <!-- Favicon
